fix: avatar uploader wrapping on smaller screens

--- a/app/account/profile/Profile.module.sass
+++ b/app/account/profile/Profile.module.sass
@@ -71,9 +71,10 @@ div.content
                         padding: 5px 0
                         padding-right: 10px
                     & input
-                        margin-left: -75px
+                        margin-left: -80px
                         opacity: .9
                         font-size: 14px
+                        width: 260px
                         @media screen and (max-width: 437px)
                             opacity: 0
                             position: absolute
